# autonomous_typing_zed

./: RUNTIME_COMMANDS.md  RUNTIME_COMMANDS_URC.md  SESSION_HANDOFF_2026-02-19.txt
src/arm_ik/: CMakeLists.txt  package.xml
src/arm_ik/src/: main.cpp
src/aruco_py/: CAMERA_SETUP.md  QUICK_START.md  package.xml  setup.cfg  setup.py
src/aruco_py/aruco_py/: aruco_node.py  aruco_node_bck1.py  aruco_node_bck2.py  aruco_node_bck3.py  aruco_node_bck4.py  ideas.txt
src/aruco_py/config/: camera_720p.yaml  camera_c920.yaml
src/aruco_py/help/: ARUCO_OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  URC_SAR_SCRIPT.md
src/aruco_py/launch/: aruco_optimized.launch.py
src/aruco_py/scripts/: optimize_camera.sh
src/typing_interfaces/: CMakeLists.txt  package.xml
src/typing_interfaces/action/: ExecuteKey.action
src/zed_aruco/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/zed_aruco/launch/: no_hardware_integration.launch.py  zed_aruco.launch.py  zed_combined.launch.py  zed_typing_integration.launch.py
src/zed_aruco/zed_aruco/: calibration_probe.py  fake_execute_key_server.py  fake_vision_publisher.py  typing_coordinator.py  zed_aruco_node.py
